...
            android:layout_weight="0.25">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/register"
                android:id="@+id/toregister"
                android:layout_weight="0.97"
                android:background="@drawable/button_on"
                android:textColor="#FFFFFF"
                android:textSize="27dp" />

            <LinearLayout
...
                android:background="@color/colorPrimaryDark"></LinearLayout>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/login"
                android:id="@+id/tologin"
                android:layout_weight="0.97"
                android:background="@drawable/button_on"
                android:textColor="#FFFFFF"
                android:textSize="27dp" />
        </LinearLayout>
    </LinearLayout>
...
