...
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/loginrequest"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/loginbutton"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />
    </LinearLayout>
</LinearLayout>
